# Anvil-Organizer

./: .gitignore  Anvil-Organizer-installer.sh  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  anvil-organizer.desktop  anvil-organizer.spec  build-appimage.sh  build-flatpak.sh  check_mods.py  create_test_mods.py  goodbye.html  index.html  install-flatpak.sh  install.sh  main.py  pyproject.toml  release.sh  requirements.txt  restart.sh  snapcraft.yaml  test_bg3.py  test_bg3_installer.py  test_bg3_mod_types.py  test_bg3_mods.py  test_conflicts.py  test_cyberpunk.py  test_fallout4.py  test_frameworks.py  test_heroic.py  test_instance.py  test_loader.py  test_lspk_parser.py  test_mod_installer.py  test_mod_model.py  test_skyrimse.py  test_starfield.py  test_steam.py  (+2 more)
.claude/: settings.local.json
.claude/agents/: workflow.md
.claude/commands/: qa-planer.md  qa-pruefer.md  qa-workflow.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: appimage.yml  build-deb.yml  deb.yml  flatpak.yml  rpm.yml  (+1 more)
anvil/: __init__.py  __main__.py  main.py  mainwindow.py  version.py
docs/: anvil-agent1-review.md  anvil-agent2-review.md  anvil-agent3-review.md  anvil-agent4-review.md  anvil-feature-ba2-packing.md  anvil-feature-ba2-wine-switch.md  anvil-feature-collection-export-import.md  anvil-feature-fomod-selection-memory.md  anvil-feature-nexus-api.md  anvil-feature-plugins-txt.md  anvil-feature-redeploy.md  anvil-feature-reshade-wizard.md  anvil-feature-sfse-shim.md  anvil-feature-v030-batch2.md  anvil-qa-fomod-integration.md  anvil-qa-report-nexus.md  anvil-qa-report-redeploy.md  anvil-qa-report.md  nexus-changelog-v030.md  nexus-changelog-v135-bbcode.txt  plugins-txt-prompts.md  qa-report-ba2-packing.md  qa-report-ba2-wine-switch.md  starfield-launch-fix.md
site/: CNAME  index.html
tools/: repair_mods.py
(+294 files in other folders)
